--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,43 +20,28 @@
 
   <body>
 <ion-app>
-
-    <ion-menu side="start" content-id="main-content">
-      <ion-header>
-        <ion-toolbar translucent>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-item href="{{ site.baseurl }}/">
-            <ion-icon name="home" slot="start"></ion-icon>
-            <ion-label>Home</ion-label>
-          </ion-item>
-          <ion-item href="{{ site.baseurl }}/store">
-            <ion-icon name="desktop-outline" slot="start"></ion-icon>
-            <ion-label>Store</ion-label>
-          </ion-item>
-          <ion-item href="{{ site.baseurl }}/about">
-            <ion-icon name="alert-circle" slot="start"></ion-icon>
-            <ion-label>About</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
     <div class="ion-page" id="main-content">
       <ion-header>
         <ion-toolbar>
           <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
           </ion-buttons>
+{% if page.layout == "default" %}
 <a href="{{ site.baseurl }}/"><ion-chip class="box-shad" color="warning">
   <ion-avatar><img class="chip" src="{{ site.avatar }}" /></ion-avatar>
   <ion-label>{{ site.name }}</ion-label>
 </ion-chip></a>
+{% endif %}
+{% if page.layout == "post" %}
+<a href="{{ site.baseurl }}/"><ion-chip color="">
+  <ion-icon name="chevron-back-outline"></ion-icon>
+  <ion-label>Kembali</ion-label>
+</ion-chip></a>
+{% endif %}
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
+    {% if page.layout == "default" %}
     <div class="wrapper-masthead">
       <div class="banner">
         <header class="masthead clearfix">
@@ -67,22 +52,6 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 <nav>
-    {% if page.layout == "default" %}
-<a href="{{ site.baseurl }}/store"><ion-chip color="">
-  <ion-icon name="desktop-outline"></ion-icon>
-  <ion-label>Store</ion-label>
-</ion-chip></a>
-{% endif %}
-    {% if page.layout == "post" %}
-<a href="{{ site.baseurl }}/"><ion-chip color="">
-  <ion-icon name="chevron-back-outline"></ion-icon>
-  <ion-label>Back</ion-label>
-</ion-chip></a>
-<a href="{{ site.baseurl }}/store"><ion-chip color="">
-  <ion-icon name="desktop-outline"></ion-icon>
-  <ion-label>Store</ion-label>
-</ion-chip></a>
-{% endif %}
     {% if page.layout == "store" %}
 <a href="{{ site.baseurl }}/"><ion-chip color="">
   <ion-icon name="home-outline"></ion-icon>
@@ -93,6 +62,7 @@
         </header>
       </div>
     </div>
+{% endif %}
 
     <div id="main" role="main" class="blog-main">
       {{ content }}
