--- a/scanner/style.css
+++ b/scanner/style.css
@@ -93,3 +93,13 @@ li a{
 .tsel{
     padding:0;
 }
+.btn {
+    padding: 20px;
+    background: #999;
+    width: 250px;
+    text-align: center;
+    border-radius: 5px;
+    color: #ffe;
+    font-size: 20px;
+    margin: auto;
+}
