--- a/scanner/style.css
+++ b/scanner/style.css
@@ -93,13 +93,13 @@ li a{
 .tsel{
     padding:0;
 }
-.btn {
-    padding: 20px;
-    background: #999;
-    width: 250px;
-    text-align: center;
-    border-radius: 5px;
-    color: #ffe;
-    font-size: 20px;
-    margin: auto;
-}
+.btn{
+      margin-top:5px;
+      margin-bottom:10px;
+      padding:5px;
+      background-color: #f2f2f2;
+      color: #000000;
+      border-radius:3px;
+      width: 150px;
+      cursor: pointer;
+    }
